# access-ability-arm

./: .gitignore  CLAUDE.md  Makefile  RBD Tweaking Code Thoughts.docx  README.md  REFACTORING.md  WINDOWS_USER_README.txt  calibration_extrinsic.json  config.yaml  config.yaml.template  main.py  my_calibration.json  pyproject.toml  requirements.txt  test_bytetrack.py  test_camera_detection.py  test_depth_validation.py  test_spatial_smoothing.py
.zed/: bashrc  settings.json
archive/: main-rd.py  main_old.py  main_pyqt.py
config/: config.yaml.template  console.py  settings.py
docs/: A-Issue_w_calib_realsense.md  README.md  WINDOWS_DISTRIBUTION.md  application-builds.md  build-size-analysis.md  camera_calibration_guide.md  camera_calibration_integration.md  client-server-architecture-plan.md  daemon-architecture-implementation-plan.md  depth-sensor-alternatives.md  depth-validation-implementation.md  grasp_planning_report.md  gripper_integration_plan.md  gui-framework-comparison.md  index.html  installation.md  ipad-depth-sensor.md  known-issues.md  monorepo.md  new-features.md  object-analysis-plan.md  open3d-point-cloud-task.md  pick-and-place-strategy.md  realsense-d435-specs.md  realsense-setup.md  refactoring.md  segmentation-smoothing-robotics.md  size-optimization.md  tauri-migration-plan.md  ufactory_studio.md  why-tauri-is-small.md
flet_gui/: main_window.py
gui/: main_window.py
hardware/: button_controller.py  camera_manager.py  realsense_camera.py
models/: .gitignore
scripts/: aaa_camera_daemon.py  align_and_view_pointcloud.py  analyze_detections.py  (+24 more)
(+46 files in other folders)
